--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install colibri and its dependencies
         run: |
-          pip install -e .
+          pip install -e .[doc]
       - name: Run doctests
         run: |
           find . -name '*.py' | xargs grep -l '>>>' | while read file; do
