--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ permissions:
   contents: write
 
 jobs:
-  docs:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
