--- a/.github/workflows/contributors_docs.yml
+++ b/.github/workflows/contributors_docs.yml
@@ -13,5 +13,7 @@ jobs:
         steps:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.3.10
+              with:
+                  readme_path: "docs/source/index.rst"
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
