--- a/.github/workflows/contributors copy.yml
+++ b/.github/workflows/contributors copy.yml
@@ -1,4 +1,4 @@
-name: contributors list on docs
+name: contributors list on readme
 
 on:
     push:
@@ -16,6 +16,6 @@ jobs:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.3.10
               with:
-                  readme_path: "docs/source/contributors.md"
+                  readme_path: "README.md"
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
