--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -16,6 +16,6 @@ jobs:
             - name: Contribute List
               uses: akhilmhdh/contributors-readme-action@v2.3.10
               with:
-                  readme_path: "docs/source/contributors.md"
+                  readme_path: "docs/source/contributors.html"
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
