fixed name branch

--- a/.github/workflows/contributors_docs.yml
+++ b/.github/workflows/contributors_docs.yml
@@ -3,8 +3,10 @@ name: contributors list on docs
 on:
     push:
         branches:
-            - contributorslist
-
+            - main
+    pull_request:
+        branches:
+            - main
 jobs:
     contrib-readme-job:
         runs-on: ubuntu-latest
